index: add contact

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,11 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
+	<p><em>Contact Us</em></p>
+        <p><a href="mailto:brandon@postpump.org">brandon@postpump.org</a></p>
+
       </header>
+
       <section>
 
       {{ content }}
