index: redo headers

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,16 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
+	<h2>Table of Contents</h2>
+
+	<ul>
+		<li><a href="/#about-us">About Us</a></li>
+		<li><a href="/#land-use-and-zoning">Land Use and Zoning</a></li>
+		<li><a href="/#reports">Reports</a></li>
+		<li><a href="/#Links">Links</a></li>
+	</ul>
+
+
 	<p><em>Contact Us</em></p>
         <p><a href="mailto:brandon@postpump.org">brandon@postpump.org</a></p>
 
