--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,7 @@
 	</ul>
 
 
-	<p><em>Contact Us</em></p>
-        <p><a href="mailto:brandon@postpump.org">brandon@postpump.org</a></p>
+	<p><a href="/signup"><em>Subscribe to the Newsletter</em></a></p>
 
       </header>
 
