--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,12 +39,12 @@ a:hover small {
 }
 
 .subscribe {
-  background-color: #74B49B; 
+  background-color: #FEC260;
   border: none;
-  color: white;
+  color: black;
   padding: 10px 20px;
   text-align: center;
-  text-decoration: none;
+  text-decoration: bold;
   display: inline-block;
   font-size: 16px;
 }
