layouts: add twitter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,10 @@
 	</ul>
 
 
-	<p><a href="/signup"><em>Subscribe to the Newsletter</em></a></p>
+
+	<h2>Stay in Touch</h2>
+	<p>✉️ <a href="/signup"><em>Subscribe to the Newsletter</em></a></p>
+	<p>🐦<a href="https://twitter.com/postpumporg"><em>Follow on Twitter</em></a></p>
 
       </header>
 
