--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
 
 	<ul>
 		<li><a href="/#about-us">About Us</a></li>
-		<li><a href="/#land-use-and-zoning">Land Use and Zoning</a></li>
-		<li><a href="/#reports">Reports</a></li>
-		<li><a href="/#Links">Links</a></li>
+		<li><a href="/#land-use-and-zoning">Land Use &amp; Zoning</a></li>
+		<li><a href="/reports">Data &amp; Reports</a></li>
+		<li><a href="/articles">News Articles</a></li>
 	</ul>
 
 
@@ -35,6 +35,7 @@
       </header>
 
       <section>
+      <p>{% include breadcrumbs.html %}</p>
 
       {{ content }}
 
