--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 	<h2>Table of Contents</h2>
 
 	<ul>
-		<li><a href="/#about-us">About Us</a></li>
+		<li><a href="/#our-mission">Our Mission</a></li>
 		<li><a href="/#land-use-and-zoning">Land Use &amp; Zoning</a></li>
 		<li><a href="/reports">Data &amp; Reports</a></li>
 		<li><a href="/articles">News Articles</a></li>
