layouts: fix typo for regulatory guidance

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 		<li><a href="/#our-mission">Our Mission</a></li>
 		<li><a href="/#land-use-and-zoning">Land Use &amp; Zoning</a></li>
 		<li><a href="/reports">Data &amp; Reports</a></li>
-		<li><a href="/regulator-guidance">Regulatory Guidance</a></li>
+		<li><a href="/regulatory-guidance">Regulatory Guidance</a></li>
 		<li><a href="/articles">News Articles</a></li>
 	</ul>
 
