index: simplify layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,17 +16,15 @@
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+	<h5>Gas/Fuel/Service Station Land Use & Zoning for an EV World</h5>
 
-	<h2>Table of Contents</h2>
-
-	<ul>
-		<li><a href="/#our-mission">Our Mission</a></li>
-		<li><a href="/#land-use-and-zoning">Land Use &amp; Zoning</a></li>
-		<li><a href="/reports">Data &amp; Reports</a></li>
-		<li><a href="/regulatory-guidance">Regulatory Guidance</a></li>
-		<li><a href="/articles">News Articles</a></li>
-	</ul>
-
+	<div class="toc">
+	<p><a href="/#our-mission">Our Mission</a></p>
+	<p><a href="/#land-use-and-zoning">Land Use &amp; Zoning</a></p>
+	<p><a href="/reports">Data &amp; Reports</a></p>
+	<p><a href="/regulatory-guidance">Regulatory Guidance</a></p>
+	<p class="last"><a href="/articles">News Articles</a></p>
+	</div>
 
 
 	<h2>Stay in Touch</h2>
