index: add resonsible party searches

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
 	<div class="toc">
 	<p><a href="/#our-mission">Our Mission</a></p>
 	<p><a href="/#land-use-and-zoning">Land Use &amp; Zoning</a></p>
+	<p><a href="/gas-station-land-use-codes">Example Municipal Codes</a></p>
+	<p><a href="/gas-station-responsible-parties">Responsible Party Searches</a></p>
 	<p><a href="/reports">Data &amp; Reports</a></p>
 	<p><a href="/regulatory-guidance">Regulatory Guidance</a></p>
 	<p class="last"><a href="/articles">News Articles</a></p>
