--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,11 @@
     {% include head-custom.html %}
   </head>
   <body>
+  	  <div id="banner">
+		<div id="banner-content">
+		  <a href="/oregon/washington-county/land-use-letter">Sign our Letter to Restrict Gas Stations in Washington County!</a>
+		  </div>
+	  </div>
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
