layouts: add header spacing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 		  <a href="/oregon/washington-county/land-use-letter">Sign our Letter to Restrict Gas Stations in Washington County!</a>
 		  </div>
 	  </div>
-    <div class="wrapper">
+    <div id="main-content" class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 	<h5>Gas/Fuel/Service Station Land Use & Zoning for an EV World</h5>
