--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -72,6 +72,9 @@ div#banner-content {
   justify-content: center;
 }
 
+div#main-content { 
+  padding-top: 70px;
+}
 
 .subscribe {
   background-color: #FEC260;
