--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
   	  <div id="banner">
 		<div id="banner-content">
-		  <a href="/oregon/washington-county/land-use-letter">Sign our Letter to Restrict Gas Stations in Washington County!</a>
+		  <a href="/oregon/washington-county/land-use-letter">Sign our Letter to Restrict Gas Stations in Washington County Oregon!</a>
 		  </div>
 	  </div>
     <div id="main-content" class="wrapper">
